# pagecount-rs

./: Cargo.toml  README.md
src/: cli.rs  color.rs  count.rs  main.rs
